centjes-gen/test_resources/balance/error/as-is/BE_CONVERSION_TOO_BIG.cent
currency USD 0.01
currency CHF 0.05

account investments assets

2023-12-17
  | Convert USD to CHF
  * investments +100 USD @ 10000000000000000 CHF
  * investments  -50 CHF
